<resources>
    <string name="app_name">ShapesPainter</string>

    <!--  fragments -->
    <string name="frag_toolbars">фрагмент тулбарсов</string>

    <!--  dialog -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit_app_prompt">Сохранить программу перед выходом?</string>

    <!--  imageButton toolbars -->
    <string name="create_triangle">создание треугольника</string>
    <string name="create_circle">создание круга</string>
    <string name="create_rectangle">создание прямоугольника</string>
    <string name="undo">для возвращения старого состояния холста</string>
    <string name="redo">для возвращения старого состояния холста</string>
    <string name="trash">удаление выделенной фигуры</string>
</resources>
